# MEA_Analysis

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BrianSliceanalysis.ipynb  Dockerfile  MEA_Analyser.py  MEA_Analyser_TF.py  MEA_NetworkGraphs.py  Multivariate_network_analysis.ipynb  Pipfile  README.md  apiscript_ROI.ipynb  axonenv.yml  build.sh  df  docker-compose.yml  install_editable_package.sh  ks4_SI_requirements.txt  nohup.out  plotly_graphing.py  pyproject.toml  raw_si_analyser.ipynb  requirements.txt  sbatch.sh  sbatch_parallel.sh  sbatch_parallel_reanalyzebursts.sh  setup.py  submit_all_parallel.sh  submit_all_parallel_rean.sh  wt_network_sup.xlsx
Archive/: ActvityNetworkAnalysisGUI.m  MEA_Analyser.py  MEA_Analyser_TF.py  MEA_NetworkGraphs.py  MEA_Network_Grapher_JL.py  MEA_analyser_JL.py  MEA_network_grapher.py  compileNetworkFIlesV2.m  compileNetworkFiles_Sep2025.m  get_raw.py  mea_analysis_routine_archive.py  processNetworkFiles.m  raw_si_analyser.ipynb  realNetworkActivityFigures_OLd.ipynb  untitled.m
AxonReconPipeline/: MediaDensity_AxonArea_Analysis_Finalizedv1.ipynb  Task9_MediaDensity_Axon(1).ipynb  Task9_MediaDensity_Axon.ipynb  axonenv.yml  get_raw.py
Connections/: README.md  UoIVarLassoMicehal.py  UoI_Lasso.py  UoI_Lasso2.py  UoI_Lasso4.py  UoI_LassoV3.py  UoI_simulation.py  batchscript.sh  classifier.py  compareconnections.py  plot_connections.py
Ensembles/: example.py  exampleV2.py
GUI/: AnalysisGUI.m  Compare_NetworkParameters.m  ComplileActivityPlots.asv  Plot_BurstProperties_JL.py  Plot_summarizedFigure2.py  README.md  (+18 more)
(+1843 files in other folders)
